# SeaOrm-Demo

./: .env  Cargo.toml  migrations.sql
entity/: Cargo.toml
entity/src/: todos.rs  users.rs
src/: main.rs
src/router/: mod.rs
src/router/common/: functions.rs  mod.rs
src/router/controller/: mod.rs  todos.rs  users.rs
src/router/handlers/: mod.rs  todos.rs  users.rs
