[package]
name = "crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "Entity"]

[dependencies]

entity = { path = "Entity" }

axum = { version = "0.6.20", features = ["headers"] }
tokio = { version = "1.31.0", features = ["full"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenv = "0.15.0"
tower-http = { version = "0.4.3", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"